--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -143,3 +143,4 @@ ManualIPAddress=
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/CryptRaider.TriggerComponent.Event",NewName="/Script/CryptRaider.TriggerComponent.OnCollisionStart")
++PropertyRedirects=(OldName="/Script/CryptRaider.TriggerComponent.MoverComponent",NewName="/Script/CryptRaider.TriggerComponent.Mover")
